# lutris-coverup

./: .env.example  .gitignore  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml
.github/ISSUE_TEMPLATE/: bug-report.md  feature-request.md
src/lutris_coverup/: __init__.py  __main__.py  cli.py  enums.py  fetch.py
